--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Scratch Projects</title>
+<title>Hire me samson</title>
   	<style type="text/css">
 		body {
 			background-color: red;
@@ -54,15 +54,10 @@ div {
 		}, 150);
 	</script>
 
-  <h1 style="color:green;">Cool Cat</h1>
-  <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/191163232/?autostart=false" frameborder="0" allowfullscreen></iframe>
-<a " target="_blank" style="color:red">This is my first one.</a>
+  <h1 style="color:green;">Hi Samson,</h1>
+	<h2 style="color:#3fba74;">Now I know I may not be a great coder, and in the past have put other commitments such as BP above robotics. Pls make me leader thanks ok bye.</h2>
 
-	<h1 style="color:#3fba74;">Up, Up, and Away!</h1>
-
-        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/193036850/?autostart=false" frameborder="0" allowfullscreen></iframe>
-	<span style="color:blue">This one</span> <span style="color:green"><del>IS REALLY BAD!</del></span><span style="color:#ff0000;"> I</span><span style="color:#ff4000;">S</span><span style="color:#ff7f00;"> </span><span style="color:#ffbf00;">A</span><span style="color:#ffff00;">M</span><span style="color:#80ff00;">A</span><span style="color:#00ff00;">Z</span><span style="color:#00ff80;">I</span><span style="color:#00ffff;">N</span><span style="color:#0080ff;">G</span><span style="color:#0000ff;">!</span>
-	<p style="color:#3fba74;">                         
+            
 	
 	
 	</p>
